[Feature]: APIs documentation using SWAGGER